test/negative/metal_string_null_forbidden/Main.hx
class Main {
	static function main() {
		var banner:String = null;
		Sys.println(banner);
	}
}
